NBRK Reporting: commit with on-the-fly totals calculations. Will switch to saving all records to DB as is, i.e. with totals records.

--- a/nicnbk-ui-angular2/src/app/reporting/view/statement.balance.operations.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/statement.balance.operations.nb.reporting.component.html
@@ -6,7 +6,7 @@
                     <span><a [routerLink]="['/reporting/NBReporting']">NB Reporting</a></span>
                 </li>
                 <li>
-                    <span *ngIf="report != null"><a [routerLink]="['/reporting/NBReporting/inputFileUpload/17']">{{getReportDateShortFormatted(report.reportDate)}}</a></span>
+                    <span *ngIf="report != null"><a [routerLink]="['/reporting/NBReporting/inputFileUpload/', reportId]">{{getReportDateShortFormatted(report.reportDate)}}</a></span>
                 </li>
                 <li class="active">Statement of Assets, Liabilities and ...</li>
             </ol>
