--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -647,10 +647,13 @@
                         </tr>
                         <tr *ngFor="let performance of fund.fundCompanyPerformance">
                             <td>
-                                <input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" [ngModelOptions]="{standalone: true}"/>
+                                <input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" pattern="[A-Za-z0-9]{1,20}" #companyName="ngModel"/>
+                                <div [hidden]="companyName.valid || companyName.pristine" class="alert alert-danger">
+                                    Name must contain 1-20 characters A-Z, a-z, 0-9
+                                </div>
                             </td>
 
-                            <td class="col-md-2">
+                            <td>
                                 <input type="text" class="form-control" name="invested" [(ngModel)]="performance.invested" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #invested="ngModel"/>
                                 <div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">
                                     Only positive number could be entered
