My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -333,6 +333,56 @@
                             <hr>
                             <div class="row withpadding">
                                 <h4>Key fund statistics</h4>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                <h5>Auto calculation</h5>
+                                <div class="onoffswitch">
+                                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+                                    <label class="onoffswitch-label" for="myonoffswitch">
+                                        <span class="onoffswitch-inner"></span>
+                                        <span class="onoffswitch-switch"></span>
+                                    </label>
+                                </div>
+
+                                <button onclick="myonoffswitch.checked = true">Check Checkbox</button>
+                                <button onclick="myonoffswitch.checked = false">Uncheck Checkbox</button>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                                 <table class=" col-md-4 table-striped table-condensed">
                                     <tr>
                                         <td class="col-md-3"><b>Number of investments</b></td>
