--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -358,7 +358,7 @@
 
                                 <h5>Auto calculation</h5>
                                 <div class="onoffswitch">
-                                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+                                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" onchange="myFunction(this)" [(ngModel)]="fund.autoCalculation" unchecked>
                                     <label class="onoffswitch-label" for="myonoffswitch">
                                         <span class="onoffswitch-inner"></span>
                                         <span class="onoffswitch-switch"></span>
@@ -389,7 +389,7 @@
                                 <table class=" col-md-4 table-striped table-condensed">
                                     <tr>
                                         <td class="col-md-3"><b>Number of investments</b></td>
-                                        <td class="col-md-3"><input style="width: 100%" type="text" name="numberOfInv" [(ngModel)]="fund.numberOfInvestments" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #numOfInv="ngModel"/>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="numberOfInv" [(ngModel)]="fund.numberOfInvestments" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.autoCalculation" #numOfInv="ngModel"/>
                                             <div [hidden]="numOfInv.valid || numOfInv.pristine" class="alert alert-danger">
                                                 Only positive number could be entered
                                             </div>
@@ -398,7 +398,7 @@
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>Invested amount</b></td>
-                                        <td class="col-md-3"><input style="width: 100%" type="text" name="invested" [(ngModel)]="fund.investedAmount" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #invested="ngModel"/>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="invested" [(ngModel)]="fund.investedAmount" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.autoCalculation" #invested="ngModel"/>
                                             <div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">
                                                 Only positive number could be entered
                                             </div>
@@ -408,7 +408,7 @@
 
                                     <tr>
                                         <td class="col-md-3"><b>Realized amount</b></td>
-                                        <td class="col-md-3"><input style="width: 100%" type="text" name="realized" [(ngModel)]="fund.realized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #realized="ngModel"/>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="realized" [(ngModel)]="fund.realized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.autoCalculation" #realized="ngModel"/>
                                             <div [hidden]="realized.valid || realized.pristine" class="alert alert-danger">
                                                 Only positive number could be entered
                                             </div>
@@ -431,7 +431,7 @@
                                 <table class=" col-md-4 table-striped table-condensed">
                                     <tr>
                                         <td class="col-md-3"><b>Unrealized amount</b></td>
-                                        <td class="col-md-3"><input style="width: 100%" type="text" name="unrealized" [(ngModel)]="fund.unrealized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #unrealized="ngModel"/>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="unrealized" [(ngModel)]="fund.unrealized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.autoCalculation" #unrealized="ngModel"/>
                                             <div [hidden]="unrealized.valid || unrealized.pristine" class="alert alert-danger">
                                                 Only positive number could be entered
                                             </div>
@@ -440,7 +440,7 @@
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>DPI</b></td>
-                                        <td class="col-md-3"><input style="width: 100%" type="text" name="dpi" [(ngModel)]="fund.dpi" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #dpi="ngModel"/>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="dpi" [(ngModel)]="fund.dpi" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.autoCalculation" #dpi="ngModel"/>
                                             <div [hidden]="dpi.valid || dpi.pristine" class="alert alert-danger">
                                                 Only positive number could be entered
                                             </div>
@@ -449,7 +449,7 @@
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>Gross TVPI</b></td>
-                                        <td class="col-md-3"><input style="width: 100%" type="text" name="grossTvpi" [(ngModel)]="fund.grossTvpi" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #grossTvpi="ngModel"/>
+                                        <td class="col-md-3"><input style="width: 100%" type="text" name="grossTvpi" [(ngModel)]="fund.grossTvpi" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="fund.autoCalculation" #grossTvpi="ngModel"/>
                                             <div [hidden]="grossTvpi.valid || grossTvpi.pristine" class="alert alert-danger">
                                                 Only positive number could be entered
                                             </div>
@@ -759,11 +759,11 @@
                             Add company
                         </button>
 
-                        <button type="submit" class="btn btn-success" *ngIf="canEdit()" (click)="savePerformance()" onclick="myonoffswitch.checked = false" [disabled]="fund.id == 0 || fund.id == null">
+                        <button type="submit" class="btn btn-success" *ngIf="canEdit()" (click)="savePerformance()" [disabled]="fund.id == 0 || fund.id == null">
                             SAVE
                         </button>
 
-                        <button type="submit" class="btn btn-success" *ngIf="canEdit()" (click)="savePerformanceAndRecalculateStatistics()" onclick="myonoffswitch.checked = true" [disabled]="fund.id == 0 || fund.id == null">
+                        <button type="submit" class="btn btn-success" *ngIf="canEdit()" (click)="savePerformanceAndRecalculateStatistics()" [disabled]="fund.id == 0 || fund.id == null">
                             SAVE and RECALCULATE the Key Fund Statistics
                         </button>
 
