--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -652,6 +652,7 @@
                             <th>Total Value</th>
                             <th>Multiple</th>
                             <th>Gross IRR</th>
+                            <th>Net IRR</th>
                         </tr>
                         <tr *ngFor="let performance of fund.fundCompanyPerformance">
                             <td>
@@ -699,6 +700,13 @@
                             <td>
                                 <input type="text" class="form-control" name="grossIrr" [(ngModel)]="performance.grossIrr" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #grossIrr="ngModel"/>
                                 <div [hidden]="grossIrr.valid || grossIrr.pristine" class="alert alert-danger">
+                                    Only positive number could be entered
+                                </div>
+                            </td>
+
+                            <td>
+                                <input type="text" class="form-control" name="netIrr" [(ngModel)]="performance.netIrr" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #netIrr="ngModel"/>
+                                <div [hidden]="netIrr.valid || netIrr.pristine" class="alert alert-danger">
                                     Only positive number could be entered
                                 </div>
                             </td>
