--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -786,15 +786,15 @@
                         <!--<button type="button" class="btn-xs btn-primary" style="display: inline-block" (click)="addRowGrossCF()"><span class="glyphicon glyphicon-plus"></span></button>-->
                     </table>
 
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="col-md-1 pull-left">
-                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowGrossCF()">
-                                    Add transaction
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                    <!--<div class="row">-->
+                        <!--<div class="col-md-12">-->
+                            <!--<div class="col-md-1 pull-left">-->
+                                <!--<button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowGrossCF()">-->
+                                    <!--Add transaction-->
+                                <!--</button>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
                 </div>
             </div>
         </div>
