--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -783,14 +783,6 @@
                                 </div>
                             </td>
 
-
-
-
-
-
-
-
-
                             <td>
                                 <input type="text" class="form-control" name="date" [(ngModel)]="cf.date" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #date="ngModel"/>
                                 <div [hidden]="date.valid || date.pristine" class="alert alert-danger">
@@ -801,19 +793,10 @@
                                 <!--</div>-->
                             </td>
 
-
-
-
-
-
-
-
-
-
                             <td>
-                                <input type="text" class="form-control" name="invested" [(ngModel)]="cf.invested" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #invested="ngModel"/>
+                                <input type="text" class="form-control" name="invested" [(ngModel)]="cf.invested" placeholder="-" pattern="[-][0-9]*\.?[0-9]+" #invested="ngModel"/>
                                 <div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">
-                                    Only positive number could be entered
+                                    Only negative number could be entered
                                 </div>
                             </td>
 
@@ -832,14 +815,14 @@
                             </td>
 
                             <td>
-                                <input type="text" class="form-control" name="grossCF" [(ngModel)]="cf.grossCF" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #grossCF="ngModel"/>
+                                <input type="text" class="form-control" name="grossCF" [(ngModel)]="cf.grossCF" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" #grossCF="ngModel"/>
                                 <div [hidden]="grossCF.valid || grossCF.pristine" class="alert alert-danger">
-                                    Only positive number could be entered
+                                    Only number could be entered
                                 </div>
                             </td>
 
                             <td>
-                                <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowGrossCF(performance)">
+                                <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowGrossCF(cf)">
                                     <span class="glyphicon glyphicon-minus"></span>
                                 </button>
                             </td>
